Fixing overflow, width, padding style issues

--- a/src/components/DashboardNav/DashboardNav.scss
+++ b/src/components/DashboardNav/DashboardNav.scss
@@ -1,8 +1,7 @@
 @use "../../styles/partials/variables" as *;
 
 .dashboard-header {
-    height: 6.5em;
-    width: 78em;
+    width: 80%;
     padding: 2rem 5rem;
     display: flex;
     justify-content: space-between;
