--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -27,9 +27,10 @@
     &__ul {
         list-style-type: none;
         width: 100%;
+        padding: 0 4rem;
 
         &--li {
-            padding: 1.5rem 4rem;
+            padding: 1.5rem 0;
             font-size: 18px;
             display: flex;
             align-items: center;
@@ -49,7 +50,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        padding: 1.5rem;
+        padding: 1.5rem 0;
 
         &--settings {
             cursor: pointer;
