--- a/src/components/TrackerTable/TrackerTable.scss
+++ b/src/components/TrackerTable/TrackerTable.scss
@@ -9,7 +9,7 @@
     }
 
     &__table {
-        max-width: 87%;
+        max-width: 85%;
         border-radius: 10px;
         box-shadow: 0 0 10px 1px $seconday-light; 
         margin: 0 2rem;
